# jhansi

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/adr/: 001-cli-watch-and-exec-commands.md
jhansi/: __init__.py  cli.py  mcp_server.py  sandbox.py
tests/: test_sandbox.py
